[metadata]
name = ciml
summary = A machine learning pipeline to analyze CI results
homepage = http://github.com/mtreinish/pyopnsense
description-file =
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    ciml

[entry_points]
console_scripts =
    ciml-db-predict = ciml.predict:db_predict
    ciml-db-batch-predict = ciml.predict:db_batch_predict
    ciml-mqtt-predict = ciml.predict:mqtt_predict
    ciml-mqtt-trainer = ciml.trainer:mqtt_trainer
    ciml-build-dataset = ciml.trainer:db_trainer
    ciml-train-model = ciml.trainer:local_trainer

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
