[metadata]
name = ciml
summary = A machine learning pipeline to analyze CI results
homepage = http://github.com/mtreinish/pyopnsense
description-file =
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    ciml

[entry_points]
console_scripts =
    ciml-db-predict = ciml.predict:db_predict
    ciml-db-batch-predict = ciml.predict:db_batch_predict
    ciml-mqtt-predict = ciml.predict:mqtt_predict
    ciml-mqtt-trainer = ciml.trainer:mqtt_trainer
    ciml-cache-data = ciml.gather_results:cache_data
    ciml-build-dataset = ciml.trainer:build_dataset
    ciml-setup-experiment = ciml.trainer:setup_experiment
    ciml-train-model = ciml.trainer:local_trainer
    ciml-train-api-server = ciml.train_api:main
    ciml-plot-data = ciml.gather_results:plot_experiment_data

wsgi_scripts =
    ciml-train-api = ciml.train_api:get_app

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
